Fix task shadow was cut off when selected and out of focus

--- a/src/client/flogo/packages/diagram/tiles/tile-task.component.less
+++ b/src/client/flogo/packages/diagram/tiles/tile-task.component.less
@@ -70,12 +70,16 @@
   margin-right: 4px;
 }
 
-.shape {
+.shape-container {
   display: block;
   pointer-events: none;
   position: absolute;
   transform: translate(10px, 5px);
   z-index: 1;
+  width: 150px;
+  height: 138px;
+  margin: 0;
+  padding: 0;
 }
 
 .content {
